[package]
name = "verifier"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
assertion-executor = { workspace = true }
axum = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
rust-tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
