[package]
name = "geth_snapshot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy = { workspace = true, features = ["rlp"] }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
mdbx.workspace = true
regex = "1.12.2"