[package]
name = "assertion-da-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "assertion-da"
path = "bin/assertion-da.rs"

[features]
default = ["full-test"]
debug_assertions = []
full-test = []

[dependencies]
alloy.workspace = true
alloy-dyn-abi.workspace = true
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
zerocopy.workspace = true
hyper.workspace = true
http-body-util.workspace = true
rand.workspace = true
hyper-util.workspace = true
bincode.workspace = true
tokio-stream.workspace = true
sled.workspace = true
k256.workspace = true
hex.workspace = true
directories.workspace = true
bollard.workspace = true
alloy-json-abi.workspace = true
tokio-util.workspace = true

tracing.workspace = true
rust-tracing.workspace = true
tracing-subscriber.workspace = true
futures-util = "0.3"
uuid = { version = "1.15", features = ["v4"] }
tempfile = "3.18"
metrics = "0.24"

thiserror = "2"
regex = "1"

assertion-da-core = { path = "../da-core" }
jsonschema = "0.30.0"

[dev-dependencies]
tempfile.workspace = true
once_cell = "1.21"
assertion-da-client = { path = "../da-client" }
