[package]
name = "assertion-da-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "assertion-da"
path = "bin/assertion-da.rs"

[features]
default = ["full-test", "debug_assertions"]
debug_assertions = []
full-test = []

[dependencies]
alloy.workspace = true
alloy-dyn-abi.workspace = true
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
hyper.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
bincode.workspace = true
sled.workspace = true
hex.workspace = true
directories.workspace = true
bollard.workspace = true
alloy-json-abi.workspace = true
tokio-util.workspace = true
redis = { workspace = true, features = ["r2d2"] }
r2d2 = "0.8"

tracing.workspace = true
rust-tracing.workspace = true
futures-util.workspace = true
uuid = { version = "1.15", features = ["v4"] }
tempfile = "3.18"
metrics.workspace = true

thiserror = "2"
regex = "1"
pcl-phoundry.workspace = true

assertion-da-core = { path = "../da-core" }
jsonschema = "0.30.0"

[dev-dependencies]
tempfile.workspace = true
assertion-da-client = { path = "../da-client" }
testcontainers.workspace = true
testcontainers-modules.workspace = true
