[package]
name = "pcl-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# workspace deps
pcl-common = { workspace = true }
pcl-phoundry = { workspace = true }

# alloy deps
alloy-primitives = { workspace = true }

# assertion-da deps
assertion-da-client = { workspace = true }

# other workspace deps
clap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
color-eyre = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }

# other deps
reqwest = { version = "0.12", features = ["json", "blocking"] }
inquire = "0.7.5"
toml = "0.8.2"
dirs = "6.0.0"
indicatif = "0.17"

[features]
default = ["full-test"]
full-test = []

[dev-dependencies]
mockito = "1.2"
tempfile = "3.6.0"
alloy = { workspace = true, features = ["signer-local"] }
int-test-utils = { workspace = true }
anyhow = { version = "1.0.98" }
