[package]
name = "pcl-phoundry"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
# Foundry deps
#forge = { path = "../../../../phoundry/crates/forge" }
#foundry-config = { path = "../../../../phoundry/crates/config" }
#foundry-cli = { path = "../../../../phoundry/crates/cli" }
#foundry-common = { path = "../../../../phoundry/crates/common" }

forge = { git = "https://github.com/phylaxsystems/phoundry.git", rev = "adc6582" }
foundry-config = { git = "https://github.com/phylaxsystems/phoundry.git", rev = "adc6582" }
foundry-cli = { git = "https://github.com/phylaxsystems/phoundry.git", rev = "adc6582" }
foundry-common = { git = "https://github.com/phylaxsystems/phoundry.git", rev = "adc6582" }

foundry-compilers = { version = "0.17.3", default-features = false }

clap = { workspace = true }
thiserror = { workspace = true }
hex = "0.4.3"

serde = { workspace = true }
serde_json = { workspace = true }
color-eyre = { workspace = true }
tempfile = { workspace = true }
tempdir = { workspace = true }
tokio = { workspace = true }

alloy-json-abi = { workspace = true }

[dev-dependencies]
