[package]
name = "pcl-phoundry"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
# Foundry deps
#forge = { path = "../../../../phoundry/crates/forge" }
#foundry-config = { path = "../../../../phoundry/crates/config" }
#foundry-cli = { path = "../../../../phoundry/crates/cli" }
#foundry-common = { path = "../../../../phoundry/crates/common" }

forge = { git = "https://github.com/phylaxsystems/phoundry.git", branch = "main" }
foundry-config = { git = "https://github.com/phylaxsystems/phoundry.git", branch = "main" }
foundry-cli = { git = "https://github.com/phylaxsystems/phoundry.git", branch = "main" }
foundry-common = { git = "https://github.com/phylaxsystems/phoundry.git", branch = "main" }

foundry-compilers = { version = "0.19.10", default-features = false }

clap = { workspace = true }
thiserror = { workspace = true }
hex = "0.4.3"

serde = { workspace = true }
serde_json = { workspace = true }
color-eyre = { workspace = true }
tempfile = { workspace = true }
tempdir = { workspace = true }
tokio = { workspace = true }

alloy-json-abi = { workspace = true }

[dev-dependencies]
