[package]
name = "pcl-phoundry"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
# Foundry deps (subtree at vendor/phoundry)
forge = { path = "../../../vendor/phoundry/crates/forge" }
foundry-config = { path = "../../../vendor/phoundry/crates/config" }
foundry-cli = { path = "../../../vendor/phoundry/crates/cli" }
foundry-common = { path = "../../../vendor/phoundry/crates/common" }

foundry-compilers = { version = "0.19.10", default-features = false }

clap = { workspace = true }
thiserror = { workspace = true }
color-eyre = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

alloy-json-abi = { workspace = true }

[dev-dependencies]
